--- a/styles.css
+++ b/styles.css
@@ -140,3 +140,62 @@ div.project h2{
     color: aqua;
     background-color: #223040;
 }
+
+
+@media (max-width: 600px){
+    .googleform{
+        color: white;
+        text-decoration: none;
+        border: 2px solid aqua;
+        border-radius: 100px;
+        padding: 10px;
+        background-color: grey;
+    }
+
+    header a{
+        color: white;
+        text-decoration: none;
+        height: 30px;
+        line-height: 30px;
+        display: inline-block;
+        font-size: 17px;
+    }
+
+    div.intro img{
+        width: 40%;
+        border-radius: 100px;
+        border: 5px solid black;
+        margin-top: 20px;
+        height: 20%;
+    }
+
+}
+
+@media (min-width: 601px){
+    .googleform{
+        color: white;
+        text-decoration: none;
+        border: 2px solid aqua;
+        border-radius: 100px;
+        padding: 10px;
+        background-color: grey;
+    }
+
+    header a{
+        color: white;
+        text-decoration: none;
+        height: 30px;
+        line-height: 30px;
+        display: inline-block;
+        font-size: 26px;
+    }
+
+    div.intro img{
+        width: 40%;
+        border-radius: 100px;
+        border: 5px solid black;
+        margin-top: 20px;
+        height: 20%;
+    }
+
+}
