--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,6 @@ div.project h2{
     background-color: #223040;
 }
 
-
 @media (max-width: 600px){
     .googleform{
         color: white;
@@ -198,4 +197,31 @@ div.project h2{
         height: 20%;
     }
 
+}
+
+@media (max-width: 400px){
+    .googleform{
+        color: white;
+        text-decoration: none;
+        border: 2px solid aqua;
+        border-radius: 100px;
+        padding: 7px;
+        background-color: grey;
+    }
+
+    header a{
+        color: white;
+        text-decoration: none;
+        height: 30px;
+        line-height: 30px;
+        display: inline-block;
+        font-size: 15px;
+        width: 25px;
+    }
+
+    a.social-link svg{
+        fill: white;
+        height: 25px;
+        width: 25px;
+    }
 }
